Refactor fetching of reports to lazy